@@ -84,6 +84,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Eiffel                 Zoran Simic
 - eMail \ mbox           Benny Baumann
 - Erlang                 Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim
+- F#                     Julien Ortin
 - FreeBasic              Roberto Rossi
 - FO (abas-ERP)          Tan-Vinh Nguyen
 - Fortran                Cedric Arrabie
